--- a/Yelp_recommendation_proj.ipynb
+++ b/Yelp_recommendation_proj.ipynb
@@ -257,7 +257,7 @@
    "metadata": {},
    "source": [
     "Looks like most customers are generally pleased with the restaurant they choose to go to. Perhaps not too many users try new cuisines and restaurants. \n",
-    "Lets now have a look at the distribution of restaurants taking the top 10 restaurants"
+    "Lets now have a look at the distribution of restaurants taking the top 10 cities."
    ]
   },
   {
